# likwid_test

./: CMakeLists.txt  README.md  likwid-perfctr.sh  main.cpp
